src/assets/css/virtual_hospital.css
/* ... */
.spcLeft {
    margin-top: 45px;
    margin-left: 54px;
}
.newStaffNew img {
    margin-top: -90px;
}
.asignStafNew {
    margin-top: 90px;
}
.QuesMrkt div:first-child img {
    width: 162.6px;
    height: initial;
}
.QuesMrkt div:last-child img {
    width: 162.6px;
    height: initial;
}
.QuesMrkt div:last-child img {
    height: 24px;
    width: 24px;
}
.QuesMrkt {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.QuesMrktUpr {
    min-height: 332px;
    border-radius: 8px;
    background-color: #FFFFFF;
    box-shadow: 0 1px 8px 0 rgb(0 8 8 / 4%);
    padding: 30px 28px;
    border-top: 3px solid #00ABAF;
    margin-bottom: 35px;
}
/* added by tanya */
.otherBrdrUpr input[type=text]{
    border:none;
    border-bottom: 1px solid grey;
    margin-left:20px;
    
}
.QuesMrktUpr h1, .QuesMrktUpr .quesitonPattient {
    color: #000808;
    font-size: 20px;
    font-weight: bold;
    letter-spacing: 0;
    line-height: 32px;
    margin-top: 32px;
    margin-bottom: 10px;
}
.onlineBox label {
    margin-right: 0px;
    margin-bottom: 0px;
}
.onlineBox label span {
    font-family: Muli;
}
.onlineBox .MuiCheckbox-colorPrimary.Mui-checked {
    color: #00ABAF;
}
.otherBorder {
    border-bottom: 1px solid #BFC1C1;
    width: 35%;
    display: inline-flex;
    height: 29px;
    margin-left: 30px;
}
.asnswerSbmt button {
    height: 40px;
    width: 167px;
    border-radius: 8px;
    background-color: #E1F7F7 !important;
    color: #00ABAF;
    font-size: 14px;
    font-weight: bold;
    letter-spacing: 0;
    line-height: 16px;
    text-align: center;
    font-family: Muli;
    text-transform: initial;
}
.asnswerSbmt {
    margin-top: 16px;
}
.alert-btn{
    color:red;
    font-weight:600;
    font-size:18px;
    margin-bottom:10px;
}
.QuesMrktUpr p {
    color: #404646;
    font-size: 14px;
    font-weight: 600;
    letter-spacing: 0;
    line-height: 20px;
    margin-bottom: 25px;
    font-family: Muli;
}
.rateExp h3 {
    color: #000808;
    font-size: 17px;
    font-weight: 600;
    letter-spacing: 0;
    line-height: 18px;
    font-family: Muli;
    margin-top: 15px;
    margin-bottom: 25px;
}
.rateExp ul {
    padding-left: 0px;
}
.rateExp ul li {
    cursor: pointer;
    list-style-type: none;
    display: inline-flex;
    height: 34px;
    width: 34px;
    border: 1px solid #F2F2F2;
    border-radius: 8px;
    background-color: #FFFFFF;
    justify-content: center;
    align-items: center;
    margin-right: 10px;
    margin-bottom: 10px;
}
.rateExp ul li:last-child {
    margin-right: 0px !important;
}
.rateExp ul li a {
    color: #BFC1C1 !important;
    font-family: Muli;
    font-size: 14px;
    font-weight: 500;
    letter-spacing: 0;
    line-height: 18px;
}
.rateExp ul li:hover {
    background-color: #00ABAF;
    box-shadow: 0 8px 24px 0 rgba(0,171,175,0.32);
}
.rateExp ul li:hover a {
    color: #ffffff !important;
}
.hintsLbl h2 {
    color: #000808;
    font-size: 20px;
    font-weight: bold;
    letter-spacing: 0;
    line-height: 32px;
    margin-top: 0px;
    margin-bottom: 10px;
}
.hintsLbl label {
    color: #2700DB;
    font-size: 12px;
    font-weight: bold;
    letter-spacing: 0;
    line-height: 12px;
    margin-top: 30px;
    margin-bottom: 5px;
    display: block;
    font-family: Muli;
}
.onlineVideo img {
    width: 100%;
}
.asnswerSbmtCenter {
    text-align: center;
}
.onlineVideo {
    margin: 15px 0px 15px;
}
.questionnareMrkt {
    border: 1px solid #E5E6E6;
    padding: 14px 14px;
}
@media (max-width: 960px) {
    .spcLeft {
        margin-top: 30px;
        margin-left: 0px;
    }
    .QuesMrktUpr {
        min-height: initial;
    }    
    .otherBorder {
        width: 60%;
    }
    .srchLft input {
        font-size: 11px;
    }
    .detailInfo {
        min-height: initial;
    }
    .dragdrop-vertical ul li {
        width: 100% !important;
    }
}
.wardsGrup .roomsNum2:last-child {
    border-bottom: none;
}
/* Added by Ankita */
@media (max-width: 959px){
    .vh-section .prfilHghtLft p span, .vh-section .prfilHghtRght p span{
        display: block;
    }
    .srchLft input::-webkit-input-placeholder {
        overflow: hidden;
        width:87%;
      }
    .srchLft input::-moz-placeholder {
        overflow: hidden;
        width:87%;
      }
    .srchLft input:-ms-input-placeholder {
        overflow: hidden;
        width:87%;
      }
    .srchLft input:-moz-placeholder { 
        overflow: hidden;
        width:87%;
      }
}
.spec-bed-profile{
    word-break: break-word;
}
.patienttoggle2 {
    margin-top: 14px !important;
}
.showOnPrint{
    display: none;
}
.darkTheme .dateFormateSec .ant-picker {
    padding: 0px;
    background: #404646;
}
.disabledCrd{
    border: 2px solid #ff6f00 !important;
}
.darkTheme .headercont {
    background: #3f4646;
}
.blood-sec{
    line-height: 30px !important;
}
.setPositionMob {
    position: relative !important;
}
.setPositionMob .flag-select{
    height: 44px;
}
ul.addpatientoption li {
    cursor: pointer;
    list-style: none;
    color: #00abaf;
    text-align: center;
}
ul.addpatientoption {
    padding: 10px;
}
ul.addpatientoption li:hover {
    text-decoration: underline;
}
.filterPatlistInner button {
    background: #00abaf;
    margin: 7px 7px 7px 0px;
    padding: 1px 15px;
}
.filterPatlist {
 position: relative;   
}
.filterPatlist img{
    width:12px;
    margin-left:7px;
}
.darkTheme .filterPatlistInner{
    background: #3f4141;
}
.filterPatlistInner {
    position: absolute;
    width: 244px;
    background: #e7e5e5;
    padding: 15px;
    top: 18px;
    left: 65px;
    z-index: 9999999;
    border-radius: 5px;
}
.alowLocAces1 .addStafSelect {
    z-index: 999999 !important;
}
.alowLocAces1 .alowLocAces1Inner{
    height: 100%;
}
.darkTheme .alowLocAces1{
	background-color: #404646 !important;
}
@media (max-width: 959px){
    .alowLocAces1 {
        width: 96% !important;
    }
}
/* ... */

